[FIX] align text in phone

--- a/frontend/src/Styles/components/_quizz.scss
+++ b/frontend/src/Styles/components/_quizz.scss
@@ -37,11 +37,10 @@
     padding: 25px;
     border-radius: 25px;
   }
-  h1 {
-    padding: 15px;
-  }
+  h1,
   h2 {
     padding: 15px;
+    text-align: center;
   }
 
   .quizz-div {
